# HomeBuyer

./: .env.example  .gitignore  CLAUDE.md  README.md  SERVICES.md  pyproject.toml  render-build.sh  render.yaml
.claude/: launch.json
data/: berkeley_homebuyer.db
data/d7_quality/: comparison_report.md  legacy.json  orchestrated.json
data/evals/baselines/: extraction_baseline.json  orchestrator_baseline.json
data/geo/: berkeley_neighborhoods.geojson  berkeley_zoning.geojson
data/glossary/: financial_terms.json  realestate_terms.json
data/glossary/seed/: financial_terms_seed.json  realestate_terms_seed.json
data/models/: berkeley_price_model.joblib
data/regulations/: categories.json  zones.json
data/regulations/seed/: categories_seed.json  zones_seed.json
docs/design/: faketor-segment-driven-design.md
marketing/: index.html
scripts/: d7_quality_comparison.py  migrate_to_postgres.py  smoke-test.sh
src/homebuyer/: __init__.py  __main__.py  api.py  auth.py  cli.py  config.py
src/homebuyer/analysis/: __init__.py  market_analysis.py  prospectus.py  rental_analysis.py
src/homebuyer/collectors/: accela_permits.py  attom.py  attom_parcels.py  attom_sales.py  berkeley_opendata.py  census.py  fred.py  glossary.py  neighborhoods.py  parcels.py  redfin_listing.py  redfin_market.py  redfin_sales.py  regulations.py  rentcast.py  rentcast_parcels.py
src/homebuyer/middleware/: security_headers.py
src/homebuyer/prediction/: __init__.py  evaluate.py  features.py  model.py  train.py
src/homebuyer/processing/: clean.py  dedup.py  development.py  geocode.py  normalize.py  (+4 more)
tests/: conftest.py  test_analysis.py  test_auth.py  test_database.py  test_date_utils.py  test_features.py  test_model.py  test_normalize.py  test_prospectus.py  test_redfin_listing.py  test_tool_enhancements.py
tests/evals/: conftest.py  fixtures.py  graders.py  metrics.py  report.py  results.py  test_e2e_eval.py  test_extraction_eval.py  test_orchestrator_eval.py
tests/faketor/: test_accumulator.py  test_adjacent_market.py  test_appreciation_stress.py  test_buyer_state.py  test_classification.py  test_competition.py  test_context.py  test_data_layer.py  test_dual_property.py  test_executor.py  test_extraction.py  test_facts.py  test_gap_tools_edge_cases.py  test_integration.py  test_jobs.py  test_market_state.py  test_neighborhood_lifestyle.py  test_orchestrator.py  test_persistence_roundtrip.py  test_persistence_schema.py  test_persistence_store.py  test_pmi_model.py  test_postprocessor.py  test_preexecution.py  test_prompts.py  test_property_state.py  test_rate_penalty.py  test_registry.py  test_rent_vs_buy.py  test_return_briefing.py  test_true_cost.py  test_yield_ranking.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: commands.rs  main.rs
(+175 files in other folders)
